--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.1",
+    "fund": "^1.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^1.1.5"
+    "react-scripts": "^5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
